--- a/.npmignore
+++ b/.npmignore
@@ -11,8 +11,7 @@
 !/LICENSE
 !/SECURITY
 !/lib/bundle/dynamicproto-js.*
-!/lib/dynamicproto-js.js
-!/lib/dynamicproto-js.js.map
-!/lib/dynamicproto-js.min.js
-!/lib/dynamicproto-js.min.js.map
-!/lib/**/*
+!/lib/dist/dynamicproto-js.js
+!/lib/dist/dynamicproto-js.js.map
+!/lib/dist/dynamicproto-js.min.js
+!/lib/dist/dynamicproto-js.min.js.map
