--- a/lib/package.json
+++ b/lib/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/dynamicproto-js",
   "author": "Microsoft Application Insights Team",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Microsoft Dynamic Proto Utility",
   "keywords": [
     "javascript",
@@ -14,7 +14,7 @@
   ],
   "main": "./dist/dynamicproto-js.js",
   "module": "./dist/dynamicproto-js.js",
-  "types": "./dist/dynamicproto-js.d.ts",
+  "types": "./types/dynamicproto-js.d.ts",
   "directories": {
     "doc": "./docs"
   },
@@ -49,7 +49,8 @@
     "tslint": "^5.19.0",
     "tslint-microsoft-contrib": "^5.2.1",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "2.5.3",
+    "typescript": "3.7.2",
+    "rollup-plugin-copy": "^3.1.0",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-uglify": "^6.0.0",
