Fixup definition error when getting an import error when using "@microsoft/dynamicproto-js" is not a module

--- a/.gitignore
+++ b/.gitignore
@@ -27,10 +27,12 @@ node_modules/
 out/
 dist-esm/
 dist/
+types/
 
 lib/bundle/
 lib/dist-esm/
 lib/dist/
+lib/types/
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
