--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/dynamicproto-js",
   "description": "Microsoft Dynamic Proto Utility",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "keywords": [
     "javascript",
     "dynamic prototype",
@@ -47,7 +47,7 @@
     "typedoc": "^0.15.1",
     "typescript": "3.7.2"
   },
-  "dependencies": {
+  "peerDependencies": {
     "tslib": "^1.9.3"
   }
 }
