--- a/tsconfigmodule.json
+++ b/tsconfigmodule.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
       "sourceMap": true,
       "inlineSources": true,
-      "noImplicitAny": false,
+      "noImplicitAny": true,
       "module": "amd",
       "target": "es3",
       "alwaysStrict": true
