--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
       "sourceMap": true,
       "inlineSources": true,
       "noImplicitAny": true,
-      "module": "amd",
+      "module": "es6",
       "target": "es3",
       "alwaysStrict": true,
       "declaration": true
