Enable the tagging and removal of stub methods during packaging #11

--- a/.gitignore
+++ b/.gitignore
@@ -27,10 +27,15 @@ node_modules/
 out/
 dist**/
 types/
+tools/
 
 lib/bundle/
 lib/dist**/
 lib/types/
+
+rollup/node_modules/
+rollup/dist**/
+rollup/types/
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
