--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ jobs:
     - stage: "Build and Test: DynamicProto JS"
       name: "Build and Test: DynamicProto JS"
       script:
+      - npm run travisinit
       - npm install
       - npm run build
       - npm run test
