--- a/lib/package.json
+++ b/lib/package.json
@@ -40,6 +40,7 @@
   "license": "MIT",
   "sideEffects": false,
   "devDependencies": {
+    "@microsoft/applicationinsights-rollup-es3" : "^1.0.0",
     "@microsoft/dynamicproto-rollup": "0.5.1",
     "grunt": "^1.0.1",
     "grunt-cli": "^1.3.2",
