--- a/lib/package.json
+++ b/lib/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/dynamicproto-js",
   "author": "Microsoft Application Insights Team",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "Microsoft Dynamic Proto Utility",
   "keywords": [
     "javascript",
@@ -40,7 +40,8 @@
   "license": "MIT",
   "sideEffects": false,
   "devDependencies": {
-    "@microsoft/dynamicproto-rollup": "0.5.1",
+    "@microsoft/applicationinsights-rollup-es3" : "^1.0.0",
+    "@microsoft/dynamicproto-rollup": "0.5.2",
     "grunt": "^1.0.1",
     "grunt-cli": "^1.3.2",
     "grunt-contrib-qunit": "^2.0.0",
