--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/dynamicproto-js",
   "description": "Microsoft Dynamic Proto Utility",
-  "version": "0.5.2",
+  "version": "1.0.0",
   "keywords": [
     "javascript",
     "dynamic prototype",
@@ -35,9 +35,9 @@
   },
   "homepage": "https://github.com/microsoft/DynamicProto-JS#readme",
   "devDependencies": {
-    "grunt": "^1.0.1",
+    "grunt": "~1.0.1",
     "grunt-cli": "^1.3.2",
-    "grunt-contrib-qunit": "^2.0.0",
+    "grunt-contrib-qunit": "^3.1.0",
     "grunt-contrib-uglify": "^3.1.0",
     "grunt-run": "^0.8.1",
     "grunt-ts": "^6.0.0-beta.22",
@@ -48,8 +48,5 @@
     "tslint-microsoft-contrib": "^5.2.1",
     "typedoc": "^0.15.1",
     "typescript": "3.7.2"
-  },
-  "peerDependencies": {
-    "tslib": "^1.9.3"
   }
 }
