--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/dynamicproto-js",
   "description": "Microsoft Dynamic Proto Utility",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "keywords": [
     "javascript",
     "dynamic prototype",
@@ -29,6 +29,7 @@
     "url": "git+https://github.com/microsoft/DynamicProto-JS.git"
   },
   "author": "Microsoft Application Insights Team",
+  "sideEffects": false,
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/microsoft/DynamicProto-JS/issues"
