[Release] Increase to version 1.1.4 (and #36) - v1.1.3 postinstall requires rush to be installed

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
+    - run: npm run ci-install
     - run: npm run build --verbose
       timeout-minutes: 10
     - run: npm run test --verbose
