--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "test": "grunt dynamicprototest",
     "rollup": "grunt rollup",
     "rupdate": "node common/scripts/install-run-rush.js update --recheck --purge --full",
-    "docs": "typedoc --out docs lib/src --excludePrivate --excludeProtected --tsconfig lib/tsconfig.json --theme minimal"
+    "docs": "typedoc --out docs lib/src --excludePrivate --excludeProtected --tsconfig lib/tsconfig.json --theme minimal",
+    "fullClean": "git clean -xdf && npm install && rush update --recheck --purge --full",
+    "fullCleanBuild": "npm run fullClean && npm run build"
   },
   "repository": {
     "type": "git",
@@ -38,20 +40,25 @@
   "homepage": "https://github.com/microsoft/DynamicProto-JS#readme",
   "dependencies": {},
   "devDependencies": {
+    "@nevware21/grunt-ts-plugin": "^0.3.0",
+    "@nevware21/grunt-eslint-ts": "^0.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
+    "eslint": "^7.29.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-security": "^1.4.0",
     "grunt": "^1.4.1",
     "grunt-cli": "^1.3.2",
     "grunt-contrib-qunit": "^4.0.0",
     "grunt-contrib-uglify": "^5.0.1",
     "grunt-run": "^0.8.1",
-    "@nevware21/grunt-ts-plugin": "^0.2.2",
-    "grunt-tslint": "^5.0.2",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-replace": "^2.3.3",
     "rollup-plugin-cleanup": "3.2.1",
     "rollup": "^2.32.0",
-    "tslint": "^5.19.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-microsoft-contrib": "^6.2.0",
     "typedoc": "^0.20.36",
     "typescript": "^3.9.9"
   }
