--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/dynamicproto-js",
   "description": "Microsoft Dynamic Proto Utility",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "keywords": [
     "javascript",
     "dynamic prototype",
@@ -40,6 +40,7 @@
   "homepage": "https://github.com/microsoft/DynamicProto-JS#readme",
   "dependencies": {},
   "devDependencies": {
+    "@microsoft/rush": "^5.67.0",
     "@nevware21/grunt-ts-plugin": "^0.3.0",
     "@nevware21/grunt-eslint-ts": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
@@ -50,8 +51,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-security": "^1.4.0",
-    "grunt": "^1.4.1",
-    "grunt-cli": "^1.3.2",
+    "grunt": "^1.5.2",
+    "grunt-cli": "^1.4.3",
     "grunt-contrib-qunit": "^4.0.0",
     "grunt-contrib-uglify": "^5.0.1",
     "grunt-run": "^0.8.1",
