--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   },
   "scripts": {
     "ci-install": "node common/scripts/install-run-rush.js check && node common/scripts/install-run-rush.js update",
-    "build": "node common/scripts/install-run-rush.js rebuild",
+    "build": "node common/scripts/install-run-rush.js rebuild && npm run docs",
     "test": "grunt dynamicprototest",
     "rollup": "grunt rollup",
     "rupdate": "node common/scripts/install-run-rush.js update --recheck --purge --full",
-    "docs": "typedoc --out docs lib/src --excludePrivate --excludeProtected --tsconfig lib/tsconfig.json --theme minimal",
+    "docs": "typedoc",
     "fullClean": "git clean -xdf && npm install && rush update --recheck --purge --full",
     "fullCleanBuild": "npm run fullClean && npm run build"
   },
@@ -60,7 +60,7 @@
     "@rollup/plugin-replace": "^2.3.3",
     "rollup-plugin-cleanup": "3.2.1",
     "rollup": "^2.32.0",
-    "typedoc": "^0.22.8",
-    "typescript": "^4.5.0"
+    "typedoc": "^0.23.25",
+    "typescript": "^4.9.5"
   }
 }
