--- a/lib/package.json
+++ b/lib/package.json
@@ -13,9 +13,9 @@
     "application insights",
     "rollup"
   ],
-  "main": "./dist/node/dynamicproto-js.js",
-  "module": "./dist/esm/dynamicproto-js.js",
-  "types": "./types/dynamicproto-js.d.ts",
+  "main": "./dist/es5/node/dynamicproto-js.js",
+  "module": "./dist-es5/DynamicProto.js",
+  "types": "./types/DynamicProto.d.ts",
   "directories": {
     "doc": "./docs"
   },
@@ -39,6 +39,7 @@
   "license": "MIT",
   "sideEffects": false,
   "dependencies": {
+    "@nevware21/ts-utils": ">= 0.9.4 < 2.x"
   },
   "devDependencies": {
     "@microsoft/applicationinsights-rollup-es3" : "^1.0.1",
