--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "minification",
     "application insights"
   ],
-  "main": "./lib/dist/node/dynamicproto-js.js",
-  "module": "./lib/dist/esm/dynamicproto-js.js",
-  "types": "./lib/types/dynamicproto-js.d.ts",
+  "main": "./lib/dist/es5/node/dynamicproto-js.js",
+  "module": "./lib/dist-es5/DynamicProto.js",
+  "types": "./lib/types/DynamicProto.d.ts",
   "directories": {
     "doc": "lib/docs"
   },
@@ -38,7 +38,9 @@
     "url": "https://github.com/microsoft/DynamicProto-JS/issues"
   },
   "homepage": "https://github.com/microsoft/DynamicProto-JS#readme",
-  "dependencies": {},
+  "dependencies": {
+    "@nevware21/ts-utils": ">= 0.9.4 < 2.x"
+  },
   "devDependencies": {
     "@microsoft/rush": "5.82.1",
     "@nevware21/grunt-ts-plugin": "^0.3.0",
