[Main] Fix npm pack and publish issues

--- a/.gitignore
+++ b/.gitignore
@@ -27,11 +27,13 @@ node_modules/
 out/
 dist**/
 types/
-tools/
 
 lib/bundle/
 lib/dist**/
 lib/types/
+lib/tools/
+lib/README*
+lib/LICENSE
 
 rollup/node_modules/
 rollup/dist**/
