--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "rupdate": "node common/scripts/install-run-rush.js update --recheck --purge --full",
     "docs": "typedoc",
     "fullClean": "git clean -xdf && npm install && rush update --recheck --purge --full",
-    "fullCleanBuild": "npm run fullClean && npm run build"
+    "fullCleanBuild": "npm run fullClean && npm run build",
+    "npm_pack": "copyfiles README.md LICENSE lib && cd lib && npm pack",
+    "npm_publish": "cd lib && node ../tools/release-tools/npm_publish.js ."
   },
   "repository": {
     "type": "git",
@@ -63,6 +65,7 @@
     "rollup-plugin-cleanup": "3.2.1",
     "rollup": "^2.32.0",
     "typedoc": "^0.23.25",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "copyfiles": "^2.4.1"
   }
 }
