[Release] Increase version to 2.0.2 - [Packaging] 2.0.1 does not include the removeDynamic.ts script #78

--- a/lib/.npmignore
+++ b/lib/.npmignore
@@ -20,5 +20,6 @@
 !dist-es5/**/*
 !types/**/*
 !tools/rollup/dist-es5/**/*
+!tools/rollup/dist/**/*
 !tools/rollup/types/**/*
 !tools/rollup/package.json
