--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "docs": "typedoc",
     "fullClean": "git clean -xdf && npm install && rush update --recheck --purge --full",
     "fullCleanBuild": "npm run fullClean && npm run build",
-    "npm_pack": "copyfiles README.md LICENSE lib && cd lib && npm pack",
-    "npm_publish": "cd lib && node ../tools/release-tools/npm_publish.js .",
+    "npm_pack": "copyfiles README.md LICENSE lib && npm pack",
+    "npm_publish": "node ./tools/release-tools/npm_publish.js .",
     "serve": "grunt serve"
   },
   "repository": {
